--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.17.1",
@@ -19,8 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -58,5 +58,5 @@
   "bugs": {
     "url": "https://github.com/josjua1610/ProyectoJazmin/issues"
   },
-  "homepage": "https://github.com/josjua1610/ProyectoJazmin#readme"
+  "homepage": "https://github.com/josjua1610/ProyectoJazmin"
 }
